ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: admin-s-n
      port:
        number: 5000
  rules:
    - http:
        paths:
          - path: /admin/flights
            pathType: Prefix
            backend:
              service:
                name: admin-s-n
                port:
                  number: 5000
